fix(contributions): fixed the alignment of the currency input

--- a/app/client/stylesheets/components/pu-formfield.sass
+++ b/app/client/stylesheets/components/pu-formfield.sass
@@ -1,6 +1,7 @@
 .pu-formfield
     display: block
     position: relative
+    text-align: left
     @extend %clearfix
 
     .twitter-typeahead
